--- a/options.html
+++ b/options.html
@@ -27,8 +27,8 @@
 
 <body>
   <img src="icon.png" id="icon" alt="UIF Allow CORS Icon" />
-  <h1>LinkedIDontKnowWhatToReplySTLAI</h1>
-  <input id="apiKey" type="text" placeholder="OpenAI Api Key" />
+  <h1>LinkedIn - Gemini Reply</h1>
+  <input id="apiKey" type="text" placeholder="Gemini API Key" />
   <button id="save">Save</button>
   <div id="status"></div>
   <script src="options.js"></script>
